--- a/templates/about.html
+++ b/templates/about.html
@@ -61,16 +61,22 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim </h3>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-                  <h3>Maecenas luctus at sem quis varius</h3>
+                  <h3>Born creative</h3>
+                  <p>Delivered in '94 by a loving bookwork of a mother and a philosopher father, my life dream is to
+                    make best use of my creative mind. Be it code, words or music, I enjoy binding those things to my will and vision.
+                  </p>
                   <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                    I used to crave the dream of touring the world as a rockstar, but I didn't understand happiness could be found just around the corner.
+                    Music still makes me happy, but I've been hooked on programming as of lately.
+                  </p>
+                  <p>
+                    Nowadays, I try to balance my time between multiple development projects, my very dear band Brunnemer,
+                    and taking clicks for my life partner <a href="https://www.instagram.com/indiesailor/?hl=en">@indiesailor</a> while she models and directs.
+                    Oh! I also DM and play D&D on tuesdays. And LARP every now and then.
+                  </p>
+                  <h3>Interested in collaboraing?</h3>
+                  <p>
+                  Please, do hit up the contact section and we'll be in touch!</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="{{ url_for('static', filename='assets/images/profil.jpg') }}" class="img-responsive" alt="">
